Fixed layout and overflow issues as well as cleaning index up

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     background: #1F2937;
     align-items: center;
     padding: 0 15%;
-    height: 700px;
+    height: 500px;
 }
 
 .second-header-container, .main-content {
@@ -59,19 +59,21 @@ body {
 }
 
 .text-content {
-    max-width: 50%;
+    width: 450px;
 }
 
 .main-title {
     font-size: 48px;
     color: #F9FAF8;
     font-weight: 900;
+    margin: 0;
 }
 
 .body-paragraph {
-    font-size: 24px;
+    font-size: 16px;
     color:#F9FAF8;
     margin-bottom: 10px;
+    margin-top: 0;
 }
 
 .sign-up-button {
@@ -86,7 +88,6 @@ body {
 .info-container {
     display: flex;
     flex-direction: column;
-    padding: 0 15%;
     align-items: center;
     height: 500px;
     justify-content: space-evenly;
@@ -136,7 +137,7 @@ body {
 .sign_up-container {
     display: flex;
     flex-direction: column;
-    padding: 0 15%;
+    margin: 0 250px;
     align-items: center;
     justify-content: center;
     height: 450px;
@@ -144,16 +145,15 @@ body {
 
 .second-sign-up {
     display: flex;
-    width: 100%;
-    height: 25%;
-    margin: 10% 0;
     flex-direction: row;
     align-items: center;
     background-color: #3882F6;
     border: 5px solid #3882F6;
     border-radius: 8px;
     justify-content: space-between;
-    padding: 20px 100px
+    padding: 20px 100px;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .text-for-sign-up {
@@ -180,9 +180,14 @@ body {
     border: 5px solid white;
 }
 
+/*footer--style*/
 .footer-container {
+    display: flex;
     background: #1F2937;
-    flex-direction: column;
     padding: 0 15%;
+    color:#F9FAF8;
+    height: 150px;
+    justify-content: center;
     align-items: center;
+    height: 50px;
 }
